added pipeline image

--- a/TeamPi-TwitterHashtag/HashtagWebApp/Pages/Shared/_Layout.cshtml
+++ b/TeamPi-TwitterHashtag/HashtagWebApp/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
         <div class="container">
             &copy; 2020 - HashtagWebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
+        <img src="https://dev.azure.com/tanthony2020/Twitter%20Hashtag/_apis/build/status/Twitter%20Hashtag-ASP.NET-CI?branchName=dev" />
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
