--- a/TeamPi-TwitterHashtag/HashtagWebApp/Pages/Shared/_LoginPartial.cshtml
+++ b/TeamPi-TwitterHashtag/HashtagWebApp/Pages/Shared/_LoginPartial.cshtml
@@ -13,6 +13,11 @@
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
     </li>
+    <li class="nav-item">
+        <form class="form-inline" asp-area="Identity" asp-page="/Account/Manage/PersonalData" asp-route-returnUrl="@Url.Page("/", new {area = ""})" method="post">
+            <button type="submit" class="nav-link btn btn-link text-dark">Manage Account</button>
+        </form>
+    </li>
 }
 else
 {
