--- a/TeamPi-TwitterHashtag/HashtagWebApp/Pages/Shared/_LoginPartial.cshtml
+++ b/TeamPi-TwitterHashtag/HashtagWebApp/Pages/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-page="/Project/TwitterLog" title="TwitterLog">Twitter Log</a>
+        <a class="nav-link text-dark" asp-area="" asp-page="/TwitterLog">Twitter Log</a>
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
