--- a/TeamPi-TwitterHashtag/HashtagWebApp/Pages/Shared/_Layout.cshtml
+++ b/TeamPi-TwitterHashtag/HashtagWebApp/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - #TwitterTrends</title>
+    <title>Tweets - #TwitterTrends</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/datatables.css" />
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - HashtagWebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2020 - #TwitterTrends - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
         <img src="https://dev.azure.com/tanthony2020/Twitter%20Hashtag/_apis/build/status/Twitter%20Hashtag-ASP.NET-CI?branchName=dev" />
     </footer>
